test/TypeCoercion/protocols_library.code
// RUN: %target-typecheck-verify-language -parse-as-library

fn refCoercion(_: inout CustomStringConvertible) {}

// Make sure we don't add the fix-it for globals in non-script files
var fp_2 = ""

immutable x = refCoercion(&fp_2) // expected-error{{inout argument could be set to a value with a type other than 'String'; use a value declared as type 'any CustomStringConvertible' instead}}

fn y() {
  refCoercion(&fp_2) // expected-error{{inout argument could be set to a value with a type other than 'String'; use a value declared as type 'any CustomStringConvertible' instead}}
}
